overlapping issue fix

--- a/ui.apps/src/main/content/jcr_root/apps/sunlife/ca/components/content/full-header/clientlibs/css/style.css
+++ b/ui.apps/src/main/content/jcr_root/apps/sunlife/ca/components/content/full-header/clientlibs/css/style.css
@@ -198,9 +198,9 @@
     min-width: 31px;
 }
 
-.desktop-sunlife-navigation {
+/*.desktop-sunlife-navigation {
     display: flex;
-}
+}*/
 
 .desktop-sunlife-navigation > .desktop-navigation {
     flex: 1;
